styles.css
/* <weight>: Use a value from 300 to 700 */
/* <uniquifier>: Use a unique and descriptive class name */

.playfair-display-normal {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.red-hat-text-normal {
  font-family: "Red Hat Text", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.red-hat-text-bold {
  font-family: "Red Hat Text", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

/* .invisible {
  display: none;
} */

/* .visible {
  display: block;
} */

h1 {
  font-size: 3rem;
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

h3 {
  font-size: 1.05rem;
}

/* body {
  font-size: 0.87rem;
  font-family: "Red Hat Text", sans-serif;
  background-color: rgb(238, 238, 238);
  color: #2c2c2c;
} */

body {
  font-size: 0.87rem;
  font-family: "Red Hat Text", sans-serif;
  background-color: rgb(253 246 231);
  /* background-color: rgb(238, 238, 238); */
  color: #000000;
  line-height: 1.8;
}

a,
u {
  text-decoration: none;
  color: rgb(106, 43, 135);
}

figure {
  margin: 0;
}

.copy {
}
/* 
button {
  color: rgb(219, 112, 30);
} */

.hover-text {
  color: rgb(219, 112, 30);
  border: none;
  background: none;
  font-size: 0.87rem;
  font-family: "Red Hat Text", sans-serif;
  padding: 0;
}

.hover-text:hover {
  color: rgb(213, 106, 24);
}

.secret-image {
  display: none;
  position: absolute;
}

.about-section.faded .plain-copy {
  opacity: 0.05;
  transition: opacity 0.2s;
}

.about-section.faded .hover-text {
  opacity: 0.05;
  transition: opacity 0.2s;
}

.about-section.faded .hover-text.hovered {
  opacity: 1;
  transform: scale(1.05);
  transform-origin: left center;
  transition:
    font-size 0.2s,
    opacity 0.2s;
}

.hover-text[data-href] {
  cursor: pointer;
}

.hover-text:not([data-href]) {
  cursor: default;
}

.inline-icon {
  display: none;
}

.sidebar {
  display: flex;
  padding: 2rem 2rem 1rem 1rem;
  flex-shrink: 0;
  border-right: 1px solid #ddd;
  position: sticky;
  top: 0;
  align-self: flex-start;
  height: fit-content;
  min-height: calc(100vh - 4rem);
  flex-direction: column;
  /* max-width: 3.1rem; */
}

.sidebar-section {
  font-size: 0.9rem;
  margin-bottom: 1.5rem;
  display: flex;
  flex-direction: column;
}

.sidebar-section a {
  display: block;
}

.sidebar-footer {
  margin-top: auto;
  color: rgb(96, 94, 89);
}

.about-content {
  font-size: 0.87rem;
  font-family: "Red Hat Text", sans-serif;
  /* background-color: rgb(238, 238, 238); */
  color: #2c2c2c;
}

/* .sidebar-label {
  font-weight: 700;
  margin-bottom: 0.3rem;
} */

.page-content {
  display: flex;
  /* gap: 3em; */
  flex-direction: row;
}

@media (min-width: 840px) {
  .content-left {
    width: 50%;
    padding: 0 10px 0 0;
  }

  .content-right {
    width: 50%;
    position: relative;
    overflow: hidden;
    padding: 0 0 0 10px;
  }
}

@media (min-width: 520px) and (max-width: 840px) {
  .page-content {
    display: flex;
    /* gap: 3em; */
    flex-direction: column;
  }
  .sidebar {
    display: flex;
    gap: 3em;
    flex-direction: row;
    border-bottom: 1px solid #ddd;
    position: static;
    min-width: 100%;
    min-height: 0;
    border-right: none;
    justify-content: center;
    box-sizing: border-box;
    padding: 0.5rem 1rem 0.75rem 1rem;
  }
  .sidebar-section {
    font-size: 0.9rem;
    margin-bottom: 0;
    display: flex;
    flex-direction: row;
    gap: 10px;
  }
  .sidebar-footer {
    display: none;
  }
  .content-left {
    width: 80%;
    padding: 0 10px 0 0;
  }
  .content-right {
    width: 0%;
    display: none;
  }

  .inline-icon {
    display: inline-block;
    width: 24px;
    height: 24px;
    object-fit: cover;
    border-radius: 3px;
    vertical-align: middle;
    margin-left: 4px;
  }
}

@media (max-width: 520px) {
  .page-content {
    display: flex;
    /* gap: 3em; */
    flex-direction: column;
  }
  .sidebar {
    display: flex;
    gap: 3em;
    flex-direction: row;
    border-bottom: 1px solid #ddd;
    position: static;
    min-width: 100%;
    min-height: 0;
    border-right: none;
    justify-content: center;
    box-sizing: border-box;
    padding: 0.5rem 1rem 0.75rem 1rem;
  }
  .sidebar-section {
    font-size: 2.95vw;
    margin-bottom: 0;
    display: flex;
    flex-direction: row;
    gap: 10px;
  }
  .sidebar-footer {
    display: none;
  }
  .content-left {
    width: 80%;
    padding: 0 10px 0 0;
  }
  .content-right {
    width: 0%;
    display: none;
  }

  .inline-icon {
    display: inline-block;
    width: 24px;
    height: 24px;
    object-fit: cover;
    border-radius: 3px;
    vertical-align: middle;
    margin-left: 4px;
  }
}

.main-content {
  padding: 0 1.5rem;
  display: flex;
  flex-direction: row;
}

.main-content.blog {
  padding: 0 1.5rem;
  display: block;
  /* flex-direction: column; */
}

.header {
  /* padding: 2rem 0; */
}

.blog-posts {
  max-width: 720px;
  margin: 0 auto;
}

.post-title {
  cursor: pointer;
  color: #5d5d5d;
}

.post-title.active {
  color: #252525;
  font-weight: 800;
}

.post-date {
  font-family: "Red Hat Text", sans-serif;
  margin-left: 0.5rem;
  color: rgba(96, 94, 89, 0.369);
  font-size: 0.87rem;
  font-weight: 400;
}

.post-content {
  font-size: 0.87rem;
  font-family: "Red Hat Text", sans-serif;
  display: none;
}

.post-content.visible {
  display: block;
}

.post-content img {
  width: 70vw;
  max-width: 450px;
  height: auto;
}

.copy-link {
  cursor: pointer;
  font-size: 0.8rem;
}

